2009-08-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* console/console.c: Spacing.

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-07-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* README.IceCube: Correct mkimage addresses.

2009-04-28	Chris Johns <chrisj@rtems.org>

	* start/start.S: Update for boot_card command line change.

2009-02-27	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* bsp_specs: Added crtbegin.o and crtend.o to support global C++
	constructors and destructors.

2009-02-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h, startup/bspstart.c: Change prototype of IDLE thread to
	consistently return void * and take a uintptr_t argument.

2008-12-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove references to start_g.o.

2008-12-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove -u start -e start from %link.
	* console/console.c: Use bool.

2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, preinstall.am: Use shared stub coverhd.h
	* include/coverhd.h: Removed.

2008-10-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Move PM520_ZE30, PM520_CR825, icecube, BRS5L
	defines from *.cfg into bspopts.h.

2008-10-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	* include/bsp.h: #include <bspopts.h> first.

2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* clock/clock.c: include "../../../shared/clockdrv_shell.h".
	* Makefile.am: Reflect changes above.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>
