@@ -235,8 +235,8 @@ extern int rtems_mpc5200_fec_driver_attach_detach (struct rtems_bsdnet_ifconfig 
 #define USE_SLICETIMER_0     TRUE
 #define USE_SLICETIMER_1     FALSE
 
-void *_Thread_Idle_body( uintptr_t ignored );
-#define BSP_IDLE_TASK_BODY _Thread_Idle_body
+void *bsp_idle_thread( uintptr_t ignored );
+#define BSP_IDLE_TASK_BODY bsp_idle_thread
 
 /* BSP specific IRQ Benchmarking support */
 void BSP_IRQ_Benchmarking_Reset(void);
