@@ -1,3 +1,8 @@
+2009-08-24	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* include/bsp.h, startup/bspstart.c: Rename _Thread_Idle_body to
+	bsp_idle_thread.
+
 2009-08-10	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* console/console.c: Spacing.
